[gd_scene load_steps=8 format=3 uid="uid://dplhswfuydwwq"]

[ext_resource type="Script" path="res://scripts/overworld/OctagonPlatform.gd" id="1_vnkn1"]
[ext_resource type="Texture2D" uid="uid://cswvhjmbg1ljg" path="res://textures/grass/grass3.png" id="2_ghs4s"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_svswe"]
albedo_texture = ExtResource("2_ghs4s")
uv1_scale = Vector3(2, 2, 2)
texture_filter = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_07b1d"]
_surfaces = [{
"aabb": AABB(-2, 0, -2, 4, 1e-05, 4),
"attribute_data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 62, 0, 0, 0, 0, 0, 0, 64, 63, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 62, 0, 0, 128, 62, 0, 0, 128, 62, 0, 0, 64, 63, 0, 0, 128, 62, 0, 0, 128, 63, 0, 0, 128, 62, 0, 0, 0, 0, 0, 0, 64, 63, 0, 0, 128, 62, 0, 0, 64, 63, 0, 0, 64, 63, 0, 0, 64, 63, 0, 0, 128, 63, 0, 0, 64, 63, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 128, 62, 0, 0, 128, 63, 0, 0, 64, 63, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 128, 63),
"format": 4113,
"index_count": 42,
"index_data": PackedByteArray(1, 0, 5, 0, 4, 0, 1, 0, 6, 0, 5, 0, 1, 0, 2, 0, 6, 0, 2, 0, 7, 0, 6, 0, 4, 0, 5, 0, 9, 0, 4, 0, 9, 0, 8, 0, 5, 0, 10, 0, 9, 0, 5, 0, 6, 0, 10, 0, 6, 0, 11, 0, 10, 0, 6, 0, 7, 0, 11, 0, 8, 0, 9, 0, 13, 0, 9, 0, 14, 0, 13, 0, 9, 0, 10, 0, 14, 0, 10, 0, 11, 0, 14, 0),
"primitive": 3,
"vertex_count": 16,
"vertex_data": PackedByteArray(0, 0, 0, 192, 0, 0, 0, 0, 0, 0, 0, 192, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 0, 192, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 0, 192, 0, 0, 0, 64, 0, 0, 0, 0, 0, 0, 0, 192, 0, 0, 0, 192, 0, 0, 0, 0, 0, 0, 128, 191, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 191, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 191, 0, 0, 0, 64, 0, 0, 0, 0, 0, 0, 128, 191, 0, 0, 0, 192, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 64, 0, 0, 0, 0, 0, 0, 128, 63, 0, 0, 0, 192, 0, 0, 0, 0, 0, 0, 0, 64, 0, 0, 128, 191, 0, 0, 0, 0, 0, 0, 0, 64, 0, 0, 128, 63, 0, 0, 0, 0, 0, 0, 0, 64, 0, 0, 0, 64, 0, 0, 0, 0, 0, 0, 0, 64)
}]

[sub_resource type="PlaneMesh" id="PlaneMesh_5ae67"]
size = Vector2(2, 4)

[sub_resource type="PlaneMesh" id="PlaneMesh_1x7e7"]
size = Vector2(2, 4)

[sub_resource type="PlaneMesh" id="PlaneMesh_q4fow"]
size = Vector2(1.41421, 4)

[node name="Octagon Platform" type="Node3D"]
script = ExtResource("1_vnkn1")
size = Vector3(4, 4, 4)
border_radius = 0.5

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_svswe")
mesh = SubResource("ArrayMesh_07b1d")

[node name="Walls" type="Node3D" parent="."]

[node name="Top" type="MeshInstance3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -2, 2)
mesh = SubResource("PlaneMesh_5ae67")

[node name="Left" type="MeshInstance3D" parent="Walls"]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, 2, -2, 0)
mesh = SubResource("PlaneMesh_1x7e7")

[node name="Bottom" type="MeshInstance3D" parent="Walls"]
transform = Transform3D(-1, -8.74228e-08, 3.82137e-15, 0, -4.37114e-08, -1, 8.74228e-08, -1, 4.37114e-08, 0, -2, -2)
mesh = SubResource("PlaneMesh_5ae67")

[node name="Right" type="MeshInstance3D" parent="Walls"]
transform = Transform3D(-4.37114e-08, -1, 4.37114e-08, 0, -4.37114e-08, -1, 1, -4.37114e-08, 1.91069e-15, -2, -2, 0)
mesh = SubResource("PlaneMesh_1x7e7")

[node name="TopLeft" type="MeshInstance3D" parent="Walls"]
transform = Transform3D(0.707107, 0.707107, -3.09086e-08, 0, -4.37114e-08, -1, -0.707107, 0.707107, -3.09086e-08, 1.5, -2, 1.5)
mesh = SubResource("PlaneMesh_q4fow")

[node name="BottomLeft" type="MeshInstance3D" parent="Walls"]
transform = Transform3D(-0.707107, 0.707107, -3.09086e-08, 0, -4.37114e-08, -1, -0.707107, -0.707107, 3.09086e-08, 1.5, -2, -1.5)
mesh = SubResource("PlaneMesh_q4fow")

[node name="BottomRight" type="MeshInstance3D" parent="Walls"]
transform = Transform3D(-0.707107, -0.707107, 3.09086e-08, 0, -4.37114e-08, -1, 0.707107, -0.707107, 3.09086e-08, -1.5, -2, -1.5)
mesh = SubResource("PlaneMesh_q4fow")

[node name="TopRight" type="MeshInstance3D" parent="Walls"]
transform = Transform3D(0.707107, -0.707107, 3.09086e-08, 0, -4.37114e-08, -1, 0.707107, 0.707107, -3.09086e-08, -1.5, -2, 1.5)
mesh = SubResource("PlaneMesh_q4fow")
